fix: fixed like button spacing

--- a/app/components/post-card/post-card-footer/PostCardFooter.module.scss
+++ b/app/components/post-card/post-card-footer/PostCardFooter.module.scss
@@ -18,7 +18,7 @@
 		cursor: pointer;
 		span {
 			position: relative;
-			width: 25px;
+			width: 22px;
 			display: flex;
 			justify-content: center;
 			&:after {
